Update accessibility page, fix minor oversight in header-footer-nav.js, add accesskey nav system and change css layout a bit

--- a/accessibility.html
+++ b/accessibility.html
@@ -19,31 +19,31 @@
     <div id="side-menu">
     </div>
     <div id="anchor-tags">
-      <a href="./index.html" class="index">HOME</a>
-      <a href="./degree-programme.html" class="degree-programme">MY DEGREE<br/>PROGRAMME</a>
-      <a href="./quiz.html" class="quiz">QUIZ</a>
-      <a href="./data.html" class="data">DATA/JS</a>
-      <a href="./contact-me.html" class="contact-me">CONTACT ME</a>
-      <a href="./accessibility.html" class="accessibility">ACCESSIBILITY</a>
+      <a href="./index.html" accesskey="1" class="index">HOME</a>
+      <a href="./degree-programme.html" accesskey="2" class="degree-programme">MY DEGREE<br/>PROGRAMME</a>
+      <a href="./quiz.html" accesskey="3" class="quiz">QUIZ</a>
+      <a href="./data.html" accesskey="4" class="data">DATA/JS</a>
+      <a href="./contact-me.html" accesskey="5" class="contact-me">CONTACT ME</a>
+      <a href="./accessibility.html" accesskey="6" class="accessibility">ACCESSIBILITY</a>
     </div>
     <div id="anchor-tags-left">
-      <a href="./index.html" class="index">HOME</a>
-      <a href="./degree-programme.html" class="degree-programme">MY DEGREE<br/>PROGRAMME</a>
-      <a href="./quiz.html" class="quiz">QUIZ</a>
+      <a href="./index.html" accesskey="1" class="index">HOME</a>
+      <a href="./degree-programme.html" accesskey="2" class="degree-programme">MY DEGREE<br/>PROGRAMME</a>
+      <a href="./quiz.html" accesskey="3" class="quiz">QUIZ</a>
     </div>
     <div id="anchor-tags-right">
-      <a href="./data.html" class="data">DATA/JS</a>
-      <a href="./contact-me.html" class="contact-me">CONTACT ME</a>
-      <a href="./accessibility.html" class="accessibility">ACCESSIBILITY</a>
+      <a href="./data.html" accesskey="4" class="data">DATA/JS</a>
+      <a href="./contact-me.html" accesskey="5" class="contact-me">CONTACT ME</a>
+      <a href="./accessibility.html" accesskey="6" class="accessibility">ACCESSIBILITY</a>
     </div>
     <div id="menu-desktop-anchor-tags">
       <div id="menu-desktop-anchor-tags-inner">
-        <a href="./index.html" class="index">HOME</a>
-        <a href="./degree-programme.html" class="degree-programme">DEGREE<br/>PROGRAMME</a>
-        <a href="./quiz.html" class="quiz">QUIZ</a>
-        <a href="./data.html" class="data">DATA/JS</a>
-        <a href="./contact-me.html" class="contact-me">CONTACT ME</a>
-        <a href="./accessibility.html" class="accessibility">ACCESSIBILITY</a>
+        <a href="./index.html" accesskey="1" class="index">HOME</a>
+        <a href="./degree-programme.html" accesskey="2" class="degree-programme">DEGREE<br/>PROGRAMME</a>
+        <a href="./quiz.html" accesskey="3" class="quiz">QUIZ</a>
+        <a href="./data.html" accesskey="4" class="data">DATA/JS</a>
+        <a href="./contact-me.html" accesskey="5" class="contact-me">CONTACT ME</a>
+        <a href="./accessibility.html" accesskey="6" class="accessibility">ACCESSIBILITY</a>
       </div>
     </div>
     <header id="mobile-tablet-header">
@@ -70,21 +70,28 @@
     </header>
     <main>
       <section>
-        <img src="./img/temp.jpg" alt="temp.jpg" />
-        <h1>Lorem ipsum dolor</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+        <h2>Accessibility Statement</h2>
+        <h3>Scope:</h3>
+        <p>This statement relates to all the web pages within this project.</p>
+        <h3>Usage of website:</h3>
+        <h4>Magnifying content</h4>
+        <p>It is possible to magnify text on all web pages up to approx. 300% without disrupting the layout.
+          For instructions on how to increase magnification please see the appropriate guide for your platform/browser online.</p>
+        <h4>Screen readers</h4>
+        <p>Most screen readers, such as ChromeVox, are accounted for and will work just fine on this website. Although the navbar
+          is initially hidden, it's elements, i.e. links to other web pages can all be properly selected regardless of its state.</p>
+        <h4>Navigation</h4>
+        <p>This website features an alternative navigation system that makes use of the html "accesskey" functionality.
+          As long as you've got a physical keyboard connected, pressing keys 1-6 together with the correct activation key will
+          navigate you to the desired page. For most browsers the activation key is "alt", however, for a complete list click
+          <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/accesskey" id="access-key-link">HERE</a>.</p>
       </section>
     </main>
     <footer>
-      <p id="copyright">© Jedrzej Golebiewski</p>
+      <div id="footer-inner">
+        <p id="accessibility"><a href="./accessibility.html">Accessibility</a></p>
+        <p id="copyright">© Jedrzej Golebiewski</p>
+      </div>
     </footer>
     <script src="./js/header-footer-nav.js"></script>
     <script src="./js/accessibility.js"></script>
