--- a/data.html
+++ b/data.html
@@ -19,31 +19,31 @@
     <div id="side-menu">
     </div>
     <div id="anchor-tags">
-      <a href="./index.html" class="index">HOME</a>
-      <a href="./degree-programme.html" class="degree-programme">MY DEGREE<br/>PROGRAMME</a>
-      <a href="./quiz.html" class="quiz">QUIZ</a>
-      <a href="./data.html" class="data">DATA/JS</a>
-      <a href="./contact-me.html" class="contact-me">CONTACT ME</a>
-      <a href="./accessibility.html" class="accessibility">ACCESSIBILITY</a>
+      <a href="./index.html" accesskey="1" class="index">HOME</a>
+      <a href="./degree-programme.html" accesskey="2" class="degree-programme">MY DEGREE<br/>PROGRAMME</a>
+      <a href="./quiz.html" accesskey="3" class="quiz">QUIZ</a>
+      <a href="./data.html" accesskey="4" class="data">DATA/JS</a>
+      <a href="./contact-me.html" accesskey="5" class="contact-me">CONTACT ME</a>
+      <a href="./accessibility.html" accesskey="6" class="accessibility">ACCESSIBILITY</a>
     </div>
     <div id="anchor-tags-left">
-      <a href="./index.html" class="index">HOME</a>
-      <a href="./degree-programme.html" class="degree-programme">MY DEGREE<br/>PROGRAMME</a>
-      <a href="./quiz.html" class="quiz">QUIZ</a>
+      <a href="./index.html" accesskey="1" class="index">HOME</a>
+      <a href="./degree-programme.html" accesskey="2" class="degree-programme">MY DEGREE<br/>PROGRAMME</a>
+      <a href="./quiz.html" accesskey="3" class="quiz">QUIZ</a>
     </div>
     <div id="anchor-tags-right">
-      <a href="./data.html" class="data">DATA/JS</a>
-      <a href="./contact-me.html" class="contact-me">CONTACT ME</a>
-      <a href="./accessibility.html" class="accessibility">ACCESSIBILITY</a>
+      <a href="./data.html" accesskey="4" class="data">DATA/JS</a>
+      <a href="./contact-me.html" accesskey="5" class="contact-me">CONTACT ME</a>
+      <a href="./accessibility.html" accesskey="6" class="accessibility">ACCESSIBILITY</a>
     </div>
     <div id="menu-desktop-anchor-tags">
       <div id="menu-desktop-anchor-tags-inner">
-        <a href="./index.html" class="index">HOME</a>
-        <a href="./degree-programme.html" class="degree-programme">DEGREE<br/>PROGRAMME</a>
-        <a href="./quiz.html" class="quiz">QUIZ</a>
-        <a href="./data.html" class="data">DATA/JS</a>
-        <a href="./contact-me.html" class="contact-me">CONTACT ME</a>
-        <a href="./accessibility.html" class="accessibility">ACCESSIBILITY</a>
+        <a href="./index.html" accesskey="1" class="index">HOME</a>
+        <a href="./degree-programme.html" accesskey="2" class="degree-programme">DEGREE<br/>PROGRAMME</a>
+        <a href="./quiz.html" accesskey="3" class="quiz">QUIZ</a>
+        <a href="./data.html" accesskey="4" class="data">DATA/JS</a>
+        <a href="./contact-me.html" accesskey="5" class="contact-me">CONTACT ME</a>
+        <a href="./accessibility.html" accesskey="6" class="accessibility">ACCESSIBILITY</a>
       </div>
     </div>
     <header id="mobile-tablet-header">
@@ -179,7 +179,10 @@
       </section>
     </main>
     <footer>
-      <p id="copyright">© Jedrzej Golebiewski</p>
+      <div id="footer-inner">
+        <p id="accessibility"><a href="./accessibility.html">Accessibility</a></p>
+        <p id="copyright">© Jedrzej Golebiewski</p>
+      </div>
     </footer>
     <script src="./js/header-footer-nav.js"></script>
     <script src="./js/data.js"></script>
