Typo in accessibility.html

--- a/accessibility.html
+++ b/accessibility.html
@@ -79,7 +79,7 @@
           For instructions on how to increase magnification please see the appropriate guide for your platform/browser online.</p>
         <h4>Screen readers</h4>
         <p>Most screen readers, such as ChromeVox, are accounted for and will work just fine on this website. Although the navbar
-          is initially hidden, it's elements, i.e. links to other web pages can all be properly selected regardless of its state.</p>
+          is initially hidden, its elements, i.e. links to other web pages can all be properly selected regardless of its state.</p>
         <h4>Navigation</h4>
         <p>This website features an alternative navigation system that makes use of the html "accesskey" functionality.
           As long as you've got a physical keyboard connected, pressing keys 1-6 together with the correct activation key will
