Add author to all files

--- a/data.html
+++ b/data.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta author="Jedrzej Golebiewski" />
+    <meta name="author" content="Jedrzej Golebiewski" />
     <title>Data/JS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="./img/favicon/favicon.ico" type="image/icon" />
