--- a/contact-me.html
+++ b/contact-me.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <meta author="Jedrzej Golebiewski" />
+    <meta name="author" content="Jedrzej Golebiewski" />
     <title>Contact Me</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="./img/favicon/favicon.ico" type="image/icon" />
@@ -97,7 +97,6 @@
       </div>
     </footer>
     <script src="./js/header-footer-nav.js"></script>
-    <script src="./js/contact-me.js"></script>
     <noscript>
       <div id="page-hide">
         <h1>This website requires javascript being enabled to run properly.</h1>
