Validate files with W3C validation service

--- a/contact-me.html
+++ b/contact-me.html
@@ -86,7 +86,7 @@
           <label for="email">Email: </label><br>
           <input type="email" name="email" id="email" placeholder="Your email..." required><br>
           <label for="message">Message: </label><br>
-          <textarea type="text" name="message" id="message" rows="6" placeholder="Your message..." required></textarea>
+          <textarea name="message" id="message" rows="6" placeholder="Your message..." required></textarea>
           <button type="submit" id="submit">Send</button>
         </form>        
     </main>
