--- a/data.html
+++ b/data.html
@@ -91,7 +91,7 @@
               <td>Tuesday</td>
               <td>8H</td>
               <td>20Min</td>
-              <td>1H&nbsp30Min</td>
+              <td>1H&nbsp;30Min</td>
             </tr>
             <tr>
               <td>Wednesday</td>
@@ -103,7 +103,7 @@
               <td>Thursday</td>
               <td>9H</td>
               <td>45Min</td>
-              <td>2H&nbsp30Min</td>
+              <td>2H&nbsp;30Min</td>
             </tr>
             <tr>
               <td>Friday</td>
@@ -115,13 +115,13 @@
               <td>Saturday</td>
               <td>7H</td>
               <td>30Min</td>
-              <td>1H&nbsp45Min</td>
+              <td>1H&nbsp;45Min</td>
             </tr>
             <tr>
               <td>Sunday</td>
               <td>8H</td>
               <td>30Min</td>
-              <td>2H&nbsp15Min</td>
+              <td>2H&nbsp;15Min</td>
             </tr>
         </tbody>
         </table>
