Add comments to all .js files and slightly modify contact-me form

--- a/contact-me.html
+++ b/contact-me.html
@@ -81,7 +81,8 @@
         Sheffield S1 4DP
         </p>
         </section>
-        <form id="contact-form" action="mailto:jgolebiewski1@sheffield.ac.uk" method="post" enctype="text/plain">
+        <form id="contact-form" action="mailto:jgolebiewski1@sheffield.ac.uk?subject=contactForm"
+        method="post" enctype="text/plain" target="_blank">
           <h1>Contact Form:</h1>
           <label for="email">Email: </label><br>
           <input type="email" name="email" id="email" placeholder="Your email..." required><br>
