Change text on home and degree page

--- a/degree-programme.html
+++ b/degree-programme.html
@@ -78,7 +78,7 @@
             <br>
             <br>
             Some modules overlap with the main Computer Science degree, so that students get the same solid grounding in the fundamentals.
-            Specialization in speech recognition, language processing or robotics are only some of the many possibilities.
+            It is possible to specialise in numerous interesting fields such as speech recognition and language processing.
           </p>
         </div>
         <div id="module-section">
