--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
         <p id="about-me-paragraph">
           I'm a first year AI & Computer Science student at The University Of Sheffield.
-          Technology and science together with business are only some of the many things that I'm passionate about.
+          Technology and science together with business are some of the many things that I'm passionate about.
           In my free time I love to play chess and develop computer software.
         </p>
       </section>
