--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <img class="about-me-image" src="./img/home/HTML_tag.png" alt="Image Of HTML Tag">
       </div>
         <p id="about-me-paragraph">
-          I'm a first year AI & Computer Science student at The University Of Sheffield.
+          I'm a first year AI & Computer Science student at The University of Sheffield.
           Technology and science together with business are some of the many things that I'm passionate about.
           In my free time I love to play chess and develop computer software.
         </p>
